force-app/main/default/objects/BillingProfile__c/BillingProfile__c.object-meta.xml
<CustomObject>
    <label>Billing Profile</label>
    <nameField>
        <displayFormat>BP-{00000000}</displayFormat>
        <label>Billing Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Profiles</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>