force-app/main/default/objects/BillingProfile__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Riferimento all&apos;Account</description>
    <label>Titolare</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billing Profiles</relationshipLabel>
    <relationshipName>BillingProfiles</relationshipName>
    <type>Lookup</type>
</CustomField>