force-app/main/default/objects/BillingProfile__c/fields/AccountClass__c.field-meta.xml
<CustomField>
    <fullName>AccountClass__c</fullName>
    <description>Corrisponde alla descrizione del KTOKL del Contract Account SAP</description>
    <label>Classe Conto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reseller - Extra Gruppo</fullName>
            </value>
            <value>
                <fullName>Reseller - Gruppo</fullName>
            </value>
            <value>
                <fullName>FUI non domestico</fullName>
            </value>
            <value>
                <fullName>FUI domestico</fullName>
            </value>
            <value>
                <fullName>Comuni Territorio</fullName>
            </value>
            <value>
                <fullName>Default gas</fullName>
            </value>
            <value>
                <fullName>Societa Vendita Terze</fullName>
            </value>
            <value>
                <fullName>Piccoli Condomini</fullName>
            </value>
            <value>
                <fullName>Aziende TOP</fullName>
            </value>
            <value>
                <fullName>Salvaguardia Enti</fullName>
            </value>
            <value>
                <fullName>Salvaguardia Aziende</fullName>
            </value>
            <value>
                <fullName>Intercompany</fullName>
            </value>
            <value>
                <fullName>Grandi Condomini</fullName>
            </value>
            <value>
                <fullName>Enti</fullName>
            </value>
            <value>
                <fullName>Aziende SME</fullName>
            </value>
            <value>
                <fullName>Aziende Soho</fullName>
            </value>
            <value>
                <fullName>Famiglie</fullName>
            </value>
            <value>
                <fullName>Accedi</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
            <value>
                <fullName>Personale</fullName>
            </value>
            <value>
                <fullName>NRI</fullName>
            </value>
            <value>
                <fullName>Aziende</fullName>
            </value>
            <value>
                <fullName>Banca centrale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>