force-app/main/default/objects/BillingProfile__c/fields/ActivationDate__c.field-meta.xml
<CustomField>
    <fullName>ActivationDate__c</fullName>
    <description>Data attivazione</description>
    <label>Data Attivazione</label>
    <type>Date</type>
</CustomField>