force-app/main/default/objects/BillingProfile__c/fields/BankAccountSignatoryCustomerCode__c.field-meta.xml
<CustomField>
    <fullName>BankAccountSignatoryCustomerCode__c</fullName>
    <description>Codice Business Partner (BP) di SAP del Pagatore</description>
    <label>Codice Cliente Sottoscrittore</label>
    <length>10</length>
    <type>Text</type>
</CustomField>