force-app/main/default/objects/BillingProfile__c/fields/BankAccountSignatoryFirstName__c.field-meta.xml
<CustomField>
    <fullName>BankAccountSignatoryFirstName__c</fullName>
    <description>Nome Sottoscrittore CC</description>
    <label>Nome sottoscrittore CC</label>
    <length>40</length>
    <type>Text</type>
</CustomField>