force-app/main/default/objects/BillingProfile__c/fields/BankAccountSignatoryFiscalCode__c.field-meta.xml
<CustomField>
    <fullName>BankAccountSignatoryFiscalCode__c</fullName>
    <description>Codice Fiscale Sottoscrittore CC</description>
    <label>Codice Fiscale Sottoscrittore CC</label>
    <length>16</length>
    <type>Text</type>
</CustomField>