force-app/main/default/objects/BillingProfile__c/fields/BankAccountSignatoryLastName__c.field-meta.xml
<CustomField>
    <fullName>BankAccountSignatoryLastName__c</fullName>
    <description>Valorizzato con i dati di chi paga(intestatario/sottoscrittore): Se c&apos;è un pagatore alternativo questi dati saranno valorizzati con quelli di quest&apos;ultimo</description>
    <label>Cognome sottoscrittore CC</label>
    <length>60</length>
    <type>Text</type>
</CustomField>