force-app/main/default/objects/BillingProfile__c/fields/BillSendingMethod__c.field-meta.xml
<CustomField>
    <fullName>BillSendingMethod__c</fullName>
    <label>Modalità invio bolletta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_BillSendingMethod</valueSetName>
    </valueSet>
</CustomField>