force-app/main/default/objects/BillingProfile__c/fields/CareOf__c.field-meta.xml
<CustomField>
    <fullName>CareOf__c</fullName>
    <label>Presso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>