force-app/main/default/objects/BillingProfile__c/fields/CIG__c.field-meta.xml
<CustomField>
    <fullName>CIG__c</fullName>
    <description>deve esserci un controllo che verifica che il valore inserito sia di 10 caratteri numerici. Il campo deve essere soo visibile in Salesforce non deve essere inviato verso SAP</description>
    <label>CIG</label>
    <length>10</length>
    <type>Text</type>
</CustomField>