force-app/main/default/objects/BillingProfile__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Per ora valido solo per amministratore di condominio</description>
    <label>Contatto Titolare</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Billing Profiles (Contatto Titolare)</relationshipLabel>
    <relationshipName>Billing_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>