force-app/main/default/objects/BillingProfile__c/fields/ContractAccountCode__c.field-meta.xml
<CustomField>
    <fullName>ContractAccountCode__c</fullName>
    <description>Codice Contract Account Sap</description>
    <externalId>true</externalId>
    <label>Conto Contrattuale</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>