force-app/main/default/objects/BillingProfile__c/fields/CreateContractAccount__c.field-meta.xml
<CustomField>
    <fullName>CreateContractAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CA da creare</label>
    <type>Checkbox</type>
</CustomField>