force-app/main/default/objects/BillingProfile__c/fields/CUP__c.field-meta.xml
<CustomField>
    <fullName>CUP__c</fullName>
    <description>deve esserci un controllo che verifica che il valore inserito sia di 16 caratteri alfanumerici. Il campo deve essere visibile solo in SFDC non deve essere inviato verso SAP</description>
    <label>CUP</label>
    <length>16</length>
    <type>Text</type>
</CustomField>