force-app/main/default/objects/BillingProfile__c/fields/CustomerMarking__c.field-meta.xml
<CustomField>
    <fullName>CustomerMarking__c</fullName>
    <formula>TEXT(Account__r.CustomerMarking__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marcatura Cliente</label>
    <type>Text</type>
</CustomField>