force-app/main/default/objects/BillingProfile__c/fields/DivergentSubject__c.field-meta.xml
<CustomField>
    <fullName>DivergentSubject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account pagatore delle bollette (diverso dal titolare della fornitura)</description>
    <label>Destinatario Divergente</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Billing Profiles</relationshipLabel>
    <relationshipName>BillingProfilesDivergentSubject</relationshipName>
    <type>Lookup</type>
</CustomField>