force-app/main/default/objects/BillingProfile__c/fields/ElectronicInvoiceCertifiedEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>ElectronicInvoiceCertifiedEmailAddress__c</fullName>
    <description>Dati per fatturazione elettronica</description>
    <label>PEC Fatturazione Elettronica</label>
    <length>50</length>
    <type>Text</type>
</CustomField>