force-app/main/default/objects/BillingProfile__c/fields/IBAN__c.field-meta.xml
<CustomField>
    <fullName>IBAN__c</fullName>
    <description>Iban del cliente</description>
    <label>Iban</label>
    <length>27</length>
    <type>Text</type>
</CustomField>