force-app/main/default/objects/BillingProfile__c/fields/IbanABI__c.field-meta.xml
<CustomField>
    <fullName>IbanABI__c</fullName>
    <description>Indica dal 6° al 10° carattere dell&apos;Iban</description>
    <label>ABI</label>
    <length>15</length>
    <type>Text</type>
</CustomField>