force-app/main/default/objects/BillingProfile__c/fields/IbanCAB__c.field-meta.xml
<CustomField>
    <fullName>IbanCAB__c</fullName>
    <description>Indica dal 11° al 15° carattere dell&apos;Iban</description>
    <label>CAB</label>
    <length>15</length>
    <type>Text</type>
</CustomField>