force-app/main/default/objects/BillingProfile__c/fields/IbanCIN__c.field-meta.xml
<CustomField>
    <fullName>IbanCIN__c</fullName>
    <description>Indica il 5° carattere dell&apos;Iban</description>
    <label>CIN</label>
    <length>1</length>
    <type>Text</type>
</CustomField>