force-app/main/default/objects/BillingProfile__c/fields/IbanCIN_IBAN__c.field-meta.xml
<CustomField>
    <fullName>IbanCIN_IBAN__c</fullName>
    <description>Indicano il 3° e il 4° carattere dell&apos;Iban (caratteri di controllo)</description>
    <label>CIN-IBAN</label>
    <length>2</length>
    <type>Text</type>
</CustomField>