force-app/main/default/objects/BillingProfile__c/fields/IbanCodeNumber__c.field-meta.xml
<CustomField>
    <fullName>IbanCodeNumber__c</fullName>
    <description>Indica dal 16° al 27° carattere dell&apos;Iban</description>
    <label>Numero Conto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>