force-app/main/default/objects/BillingProfile__c/fields/IbanCountry__c.field-meta.xml
<CustomField>
    <fullName>IbanCountry__c</fullName>
    <description>Indica i primi due caratteri dell&apos;IBAN</description>
    <label>Paese</label>
    <length>2</length>
    <type>Text</type>
</CustomField>