force-app/main/default/objects/BillingProfile__c/fields/IbanIsForeign__c.field-meta.xml
<CustomField>
    <fullName>IbanIsForeign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>è un campo di tipo flag se a Yes vierrà inserito l&apos;IBAN Estero e devono essere effettuati i controlli su IBAN estero</description>
    <label>IBAN Estero</label>
    <type>Checkbox</type>
</CustomField>