force-app/main/default/objects/BillingProfile__c/fields/InvoiceCertifiedEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>InvoiceCertifiedEmailAddress__c</fullName>
    <label>Email PEC Invio Bolletta</label>
    <type>Email</type>
</CustomField>