force-app/main/default/objects/BillingProfile__c/fields/InvoicingAddessIsForeign__c.field-meta.xml
<CustomField>
    <fullName>InvoicingAddessIsForeign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indirizzo Estero</label>
    <type>Checkbox</type>
</CustomField>