force-app/main/default/objects/BillingProfile__c/fields/InvoicingAddressFormula__c.field-meta.xml
<CustomField>
    <fullName>InvoicingAddressFormula__c</fullName>
    <formula>InvoicingStreetName__c &amp;&apos;, &apos;&amp; InvoicingStreetNumber__c &amp;&apos;/&apos;&amp; InvoicingStreetNumberExtension__c &amp;&apos;, &apos;&amp; InvoicingPlace__c &amp;&apos;, &apos;&amp; InvoicingCity__c &amp;&apos;, &apos;&amp; InvoicingProvince__c &amp;&apos;, &apos;&amp; InvoicingPostalCode__c &amp;&apos;, &apos;&amp; InvoicingCountry__c</formula>
    <label>Indirizzo Spedizione/Fatturazione</label>
    <type>Text</type>
</CustomField>