force-app/main/default/objects/BillingProfile__c/fields/InvoicingCity__c.field-meta.xml
<CustomField>
    <fullName>InvoicingCity__c</fullName>
    <label>Comune [Spedizione/Fatturazione]</label>
    <length>50</length>
    <type>Text</type>
</CustomField>