force-app/main/default/objects/BillingProfile__c/fields/InvoicingPlace__c.field-meta.xml
<CustomField>
    <fullName>InvoicingPlace__c</fullName>
    <label>Località [Spedizione/Fatturazione]</label>
    <length>50</length>
    <type>Text</type>
</CustomField>