force-app/main/default/objects/BillingProfile__c/fields/InvoicingPlaceCode__c.field-meta.xml
<CustomField>
    <fullName>InvoicingPlaceCode__c</fullName>
    <label>Codice Località [Spedizione/Fatturazione</label>
    <length>30</length>
    <type>Text</type>
</CustomField>