force-app/main/default/objects/BillingProfile__c/fields/InvoicingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>InvoicingPostalCode__c</fullName>
    <label>CAP [Spedizione/Fatturazione]</label>
    <length>20</length>
    <type>Text</type>
</CustomField>