force-app/main/default/objects/BillingProfile__c/fields/InvoicingProvince__c.field-meta.xml
<CustomField>
    <fullName>InvoicingProvince__c</fullName>
    <description>Provincia codificata in due caratteri</description>
    <label>Provincia [Spedizione/Fatturazione]</label>
    <length>2</length>
    <type>Text</type>
</CustomField>