force-app/main/default/objects/BillingProfile__c/fields/InvoicingStreetCode__c.field-meta.xml
<CustomField>
    <fullName>InvoicingStreetCode__c</fullName>
    <description>SAP Street Code [Invoicing]</description>
    <label>Codice Via Stradario SAP [Spedizione/Fat</label>
    <length>30</length>
    <type>Text</type>
</CustomField>