force-app/main/default/objects/BillingProfile__c/fields/InvoicingStreetName__c.field-meta.xml
<CustomField>
    <fullName>InvoicingStreetName__c</fullName>
    <label>Nome Via [Spedizione/Fatturazione]</label>
    <length>200</length>
    <type>Text</type>
</CustomField>