force-app/main/default/objects/BillingProfile__c/fields/InvoicingStreetNumber__c.field-meta.xml
<CustomField>
    <fullName>InvoicingStreetNumber__c</fullName>
    <label>Civico [Spedizione/Fatturazione]</label>
    <length>30</length>
    <type>Text</type>
</CustomField>