force-app/main/default/objects/BillingProfile__c/fields/InvoicingStreetToponym__c.field-meta.xml
<CustomField>
    <fullName>InvoicingStreetToponym__c</fullName>
    <description>Toponimo</description>
    <label>Toponimo [Spedizione/Fatturazione]</label>
    <length>30</length>
    <type>Text</type>
</CustomField>