force-app/main/default/objects/BillingProfile__c/fields/IsDigitalMarking__c.field-meta.xml
<CustomField>
    <fullName>IsDigitalMarking__c</fullName>
    <formula>Account__r.IsDigitalMarking__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marcatura Digital</label>
    <type>Checkbox</type>
</CustomField>