force-app/main/default/objects/BillingProfile__c/fields/IsInactiveSAPContractAccount__c.field-meta.xml
<CustomField>
    <fullName>IsInactiveSAPContractAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica che il CA in SAP è inattivo.</description>
    <label>Contract Account inattivo</label>
    <type>Checkbox</type>
</CustomField>