force-app/main/default/objects/BillingProfile__c/fields/IsThirtyDaysDue__c.field-meta.xml
<CustomField>
    <fullName>IsThirtyDaysDue__c</fullName>
    <label>Scadenza 30 giorni</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_YesNo</valueSetName>
    </valueSet>
</CustomField>