force-app/main/default/objects/BillingProfile__c/fields/IsWrongFiscalData__c.field-meta.xml
<CustomField>
    <fullName>IsWrongFiscalData__c</fullName>
    <formula>Account__r.IsWrongFiscalData__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dati fiscali errati</label>
    <type>Checkbox</type>
</CustomField>