force-app/main/default/objects/BillingProfile__c/fields/OtherPayer_c__c.field-meta.xml
<CustomField>
    <fullName>OtherPayer_c__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account pagatore delle bollette (diverso dal titolare della fornitura)</description>
    <label>Pagatore Alternativo</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Billing Profiles</relationshipLabel>
    <relationshipName>Billing_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>