force-app/main/default/objects/BillingProfile__c/fields/PaymentConditions__c.field-meta.xml
<CustomField>
    <fullName>PaymentConditions__c</fullName>
    <description>Relativo al CA di SAP</description>
    <label>Condizioni di pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MANUALE</fullName>
            </value>
            <value>
                <fullName>20 GG - IS01</fullName>
            </value>
            <value>
                <fullName>30 GG - IS02</fullName>
            </value>
            <value>
                <fullName>45 GG - IS03</fullName>
            </value>
            <value>
                <fullName>60 GG - IS04</fullName>
            </value>
            <value>
                <fullName>90 GG - IS05</fullName>
            </value>
            <value>
                <fullName>10 gg. D.F. F.M. - IS06</fullName>
            </value>
            <value>
                <fullName>15 gg. D.F. F.M. - IS07</fullName>
            </value>
            <value>
                <fullName>20 gg. D.F. F.M. - IS08</fullName>
            </value>
            <value>
                <fullName>30 gg. D.F. F.M. - IS3F</fullName>
            </value>
            <value>
                <fullName>60 gg. D.F. F.M. - IS6F</fullName>
            </value>
            <value>
                <fullName>90 gg. D.F. F.M. - IS9F</fullName>
            </value>
            <value>
                <fullName>D.F. F.M. - ISFM</fullName>
            </value>
            <value>
                <fullName>120 gg. D.F. F.M.- IS2F</fullName>
            </value>
            <value>
                <fullName>15 GG - IS7F</fullName>
            </value>
            <value>
                <fullName>45 gg. D.F. F.M. - IS10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>