force-app/main/default/objects/BillingProfile__c/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <description>Bollettino postale
Bonifico bancario
RID</description>
    <label>Modalità pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bollettino postale</fullName>
            </value>
            <value>
                <fullName>Bonifico bancario</fullName>
            </value>
            <value>
                <fullName>RID</fullName>
            </value>
            <value>
                <fullName>F24</fullName>
                <isActive>false</isActive>
                <label>F24</label>
            </value>
            <value>
                <fullName>PAGOPA</fullName>
                <isActive>false</isActive>
                <label>PAGOPA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>