force-app/main/default/objects/BillingProfile__c/fields/ReminderCertifiedEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>ReminderCertifiedEmailAddress__c</fullName>
    <label>PEC per sollecito</label>
    <type>Email</type>
</CustomField>