force-app/main/default/objects/BillingProfile__c/fields/ReminderFlag__c.field-meta.xml
<CustomField>
    <fullName>ReminderFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag per sollecito</label>
    <type>Checkbox</type>
</CustomField>