force-app/main/default/objects/BillingProfile__c/fields/RevocationDate__c.field-meta.xml
<CustomField>
    <fullName>RevocationDate__c</fullName>
    <description>Data revoca</description>
    <label>Data revoca</label>
    <type>Date</type>
</CustomField>