force-app/main/default/objects/BillingProfile__c/fields/SignatoryType__c.field-meta.xml
<CustomField>
    <fullName>SignatoryType__c</fullName>
    <label>Tipo Sottoscrittore</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Legale Rappresentante</fullName>
            </value>
            <value>
                <fullName>Pagatore Alternativo</fullName>
            </value>
            <value>
                <fullName>Stesso Sottoscrittore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>