force-app/main/default/objects/BillingProfile__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status; Ereditato da SAP</description>
    <label>Status del Profilo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>