force-app/main/default/objects/BillingProfile__c/fields/SubjectCode__c.field-meta.xml
<CustomField>
    <fullName>SubjectCode__c</fullName>
    <description>in questo campo deve essere riportato il codice ufficio, deve essere implementato se modalità invio fatturazione XML se invece Modalità invio Fatturazione XML+carta non deve essere implemetato</description>
    <label>Codice Destinatario</label>
    <length>30</length>
    <type>Text</type>
</CustomField>