force-app/main/default/objects/BillingProfile__c/fields/SubjectCodeEndDate__c.field-meta.xml
<CustomField>
    <fullName>SubjectCodeEndDate__c</fullName>
    <label>Data fine validità codice destinatario</label>
    <type>Date</type>
</CustomField>