force-app/main/default/objects/BillingProfile__c/fields/SubjectCodeStartDate__c.field-meta.xml
<CustomField>
    <fullName>SubjectCodeStartDate__c</fullName>
    <label>Data inizio validità codice destinatario</label>
    <type>Date</type>
</CustomField>