force-app/main/default/objects/BillingProfile__c/fields/XMLType__c.field-meta.xml
<CustomField>
    <fullName>XMLType__c</fullName>
    <label>Tipo XML</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_XmlType</valueSetName>
    </valueSet>
</CustomField>