force-app/main/default/objects/BillingProfile__c/fields/XMLType_c__c.field-meta.xml
<CustomField>
    <fullName>XMLType_c__c</fullName>
    <description>Dati per fatturazione elettronica</description>
    <label>Tipo XML</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dettaglio</fullName>
            </value>
            <value>
                <fullName>Sintetico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>