force-app/main/default/objects/BillingProfile__c/validationRules/HDT_VR_SubjectCodeDate.validationRule-meta.xml
<ValidationRule>
    <fullName>HDT_VR_SubjectCodeDate</fullName>
    <active>true</active>
    <errorConditionFormula>OR
(    AND(NOT(ISBLANK(SubjectCodeStartDate__c)),
				NOT(REGEX(SubjectCodeStartDate__c,&quot;[12]?\\d{3}-(0?[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])&quot;))),
    AND(NOT(ISBLANK(SubjectCodeEndDate__c)),
 	      NOT(REGEX(SubjectCodeEndDate__c,&quot;[12]?\\d{3}-(0?[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])&quot;)))
	)</errorConditionFormula>
    <errorMessage>La data Inizio/Fine Codice Validità deve essere nel formato &quot;YYYY-MM-DD&quot;</errorMessage>
</ValidationRule>